- BG Table - Image sizes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>gwent</title>
+    <title>Gwent</title>
+    <link rel="icon" type="image/png" href="/static/the-witcher.png"/>
+    <link rel="stylesheet" href="/static/style.css">
   </head>
   <body>
     <div id="app"></div>
